--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body {
     background-color: black;
 }
 
-
 header {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -171,6 +170,7 @@ form {
     padding: 20px;
     border-radius: 10px;
     margin: 10px;
+    background-color: #2D3A3C;
 }
 
 label {
@@ -191,7 +191,7 @@ button {
 }
 
 button:hover {
-    background-color: #2D3A3C;
+    background-color: #224710;
 }
 
 footer {
